switched to rgba values to fix truncate transparency gradient, updated flux changelog

--- a/styles/layout-article.less
+++ b/styles/layout-article.less
@@ -497,7 +497,7 @@ a {
 
 		.truncate-bottom {
 			bottom: 0;
-			background-image: linear-gradient(to bottom, rgba(255,0,0,0), @article-bg);
+			background-image: linear-gradient(to bottom, @article-bg-rgba-0, @article-bg-rgba-1);
 			height: 100px;
 		}
 
